[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "logballoon"
version = "0.1.1"
description = "Offline-first logging and operations SDK for desktop apps"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "logballoon" },
]
keywords = [
  "offline-first",
  "logging",
  "desktop",
  "telemetry",
  "crash-reporting",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: System :: Logging",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.urls]
Homepage = "https://github.com/logballoon/logballoon"
Repository = "https://github.com/logballoon/logballoon"

[tool.hatch.build.targets.wheel]
packages = ["src/logballoon"]

[tool.hatch.build.targets.wheel.sources]
"src/logballoon" = "logballoon"

[tool.hatch.build.targets.sdist]
include = [
  "/src/logballoon",
  "/examples",
  "/tests",
  "/README.md",
  "/LICENSE",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
